# simple_network_inspection_tool

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  run.py
API/: __init__.py  config.py  crud.py  database.py  decorator.py  device_management.py  file_handle.py  file_operations.py  huawei_telnet.py  logger.py  main.py  models.py  schemas.py  templates_interface.py  utility.py
Vue3/: Dockerfile  README.md  default.conf  index.html  package-lock.json  package.json  vite.config.js
Vue3/mock/: index.js
Vue3/src/: App.vue  main.js
Vue3/src/components/commom/: 404.vue
Vue3/src/request/: http.js  index.js
Vue3/src/router/: index.js  routes.js
Vue3/src/store/: index.js
Vue3/src/styles/: style.css
Vue3/src/utils/: util.js
Vue3/src/views/: index.vue
docs/: 功能介绍.md  安装说明.md  应用介绍.md  更新说明.md  简化模板函数编写.md  配置文件使用说明.md
static/: 404-10831104.css  404-d39bf022.js  404-ffe76c04.js  index-1c100939.css  index-559a7015.js  index-653f5afe.js  index-a17e779c.css  index-b5d205c9.js  index-bebfaba0.js  index-ede6bcd3.css
templates/: Cisco.py  h3c.py  huawei.py  huawei_interface.py  huawei_s57_R21.py
textfsm_templates/: interface_info.textfsm  route.textfsm  version.textfsm
